# picoquic

./: .gitignore  CMakeLists.txt
.devcontainer/: Docker-compose.yaml  Dockerfile  devcontainer.json
cmake/: FindLibEvent.cmake
experiment/: CMakeLists.txt  CodeStyle.xml  build_deps.sh  client.c  client_main.c  common.c  rfc.txt  server.c  server_main.c
experiment/include/: client.h  common.h  rpc.h  server.h
experiment/test/: test_buffer.c
